apps/llama/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llama
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
